# WenAnAiWrite

./: .gitignore  CHANGELOG.md  README.md  bilibli.json  douyin.json  index.html  package-lock.json  package.json  vite.config.js  xiaohongshu.json
.github/workflows/: ci.yml  release.yml  version-bump.yml
parser-service/: build_exe.py  main.py  test_parser.py
parser-service/parsers/: __init__.py  bilibili.py  douyin.py  xiaohongshu.py
parser-service/utils/: __init__.py  bogus.py  http_client.py  url_parser.py
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  lib.rs  tray.rs  window.rs
src-tauri/src/commands/: audio.rs  download.rs  filesystem.rs  mod.rs  network.rs
src/api/: index.js
src/components/common/: AudioPlayer.vue  CloseMask.vue  CustomSelect.vue  Sidebar.vue  TitleBar.vue  Updater.vue  index.js
src/constants/: animation.js  index.js  motionAnimations.js  platforms.js
src/router/: index.js
src/services/: aiRewrite.js  index.js  tencentAsr.js
src/services/api/: bilibiliApi.js  douyinApi.js  xiaohongshuApi.js
src/services/auth/: bilibiliAuth.js  xiaohongshuAuth.js
src/services/config/: defaultConfig.js  index.js
src/services/download/: downloadService.js
src/services/storage/: fileStorage.js  historyStorage.js  (+1 more)
src/stores/: config.js  history.js  index.js  taskQueue.js  theme.js  update.js
src/utils/: index.js  platform.js  request.js  urlParser.js  validate.js
src/views/: HistoryPage.vue  ParsePage.vue  SettingsPage.vue  index.js
(+18 files in other folders)
